webkitgtk (2.0.4-4) UNRELEASED; urgency=low

  * debian/rules:
    + Switch powerpc to stabs as it's currently taking too much space in
      the buildds.
  * debian/control:
    + Add myself to Uploaders.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 29 Aug 2013 18:14:20 +0200

webkitgtk (2.0.4-3) unstable; urgency=low

  * debian/rules:
  - merge build and install rules so we can install right after building
    each flavor, and save space by cleaning up the build
  - clean *.pyc files in the clean target, to allow multiple builds in the
    same source tree again
  * debian/rules:
  - disable debug symbols sparc, and use stabs for armel, like we already
    do for armhf; their buildds are too constrained in terms of hardware
    resources

 -- Gustavo Noronha Silva <kov@debian.org>  Sun, 25 Aug 2013 18:26:50 -0300

webkitgtk (2.0.4-2) unstable; urgency=low

  [ Jeremy Bicha ]
  * Don't recommend universe gstreamer codecs on Ubuntu. Closes: #714299.

  [ Gustavo Noronha ]
  * debian/patches/03_atomics-buildfix.patch:
  - patch from upstream to fix build in architectures which do not support
    some atomic builtins for 64 bits types (should fix powerpc and sparc)
  * debian/libwebkit2gtk-3.0-25.symbols, debian/symbols.filter:
  - export the WebGtkExtensionManager, used by WebKit2GTK+ for loading
    injected bundle plugins

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 14 Aug 2013 22:13:41 -0300

webkitgtk (2.0.4-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/compat:
    + Go back to compat 8 for now as compressed symbol files kill .deb
      compression. Also objcopy seems to take a lot of memory to compress
      debugging symbols, killing the build in some cases.
  * debian/rules:
    + Stop building with -O1 on armhf. Hopefully the compiler error we were
      getting has been fixed.
    + Build with -gstabs on armhf and kfreebsd to try to eat less memory
      and make the build succeed. If it doesn't we may have to disable